scrolling and spacing issues on main page

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 .data-wrapper{
@@ -31,6 +32,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    //margin-bottom: 80px;
+    padding-bottom: 60px;
 }
 
 .separator{
